modified run.sh and tear-down.sh::modifications to overall demo

--- a/flume/flume-onoaam.conf
+++ b/flume/flume-onoaam.conf
@@ -28,7 +28,7 @@ agent.sinks = hdfsSink
 # For each one of the sources, the type is defined
 agent.sources.onoaamSrc.type = exec
 agent.sources.onoaamSrc.channels = onoaamChannel
-agent.sources.onoaamSrc.command = tail -F /home/hdp/demo-web-logs/output/output.log
+agent.sources.onoaamSrc.command = tail -F output/output.log
 #agent.sources.onoaamSrc.batchSize = 20
 
 # The channel can be defined as follows.
@@ -52,7 +52,7 @@ agent.channels.onoaamChannel.type = file
 
 # Other config values specific to each type of channel(sink or source)
 # can be defined as well
-agent.channels.onoaamChannel.checkpointDir = /home/hdp/flume/checkpoint
-agent.channels.onoaamChannel.dataDirs = /home/hdp/flume/data
+agent.channels.onoaamChannel.checkpointDir = ~/demo-output/flume/checkpoint
+agent.channels.onoaamChannel.dataDirs = ~/demo-output/flume/data
 agent.channels.onoaamChannel.capacity = 1000000
 agent.channels.onoaamChannel.transactionCapacity = 1000000
